Fix crash in qstring-comparison-to-implicit-char

BUG: 502458