src/checks/level0/qstring-comparison-to-implicit-char.cpp
@@ -33,7 +33,7 @@ void QStringComparisonToImplicitChar::VisitStmt(clang::Stmt *stmt)
     }
 
     auto *functionDecl = dyn_cast<FunctionDecl>(callExpr->getCalleeDecl());
-    if (!functionDecl || functionDecl->getOverloadedOperator() != clang::OO_EqualEqual) {
+    if (!functionDecl || functionDecl->getOverloadedOperator() != clang::OO_EqualEqual || functionDecl->getNumParams() != 2) {
         return;
     }
 
